#find_package(Magnum REQUIRED GL Sdl2Application)
#
#set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)

#add_executable(ebc ebc.cpp)
#target_link_libraries(ebc PRIVATE
#    Magnum::Application
#    Magnum::GL
#    Magnum::Magnum
#    ${PCAP_LIBRARY}
#    )

#add_executable(xxx xxx.cpp ${SHARK_COMMON_SRC})
#target_link_libraries(xxx PRIVATE
#    capchild
#    caputils
#    ${LIBEPAN_LIBS}
#    )
